Name: William Lai
Date: 12-29-2014
Description: Threefold repetition
    * Threefold repetition check now implemented via HashMap (so far in StandardGame only)
    * Still need testing for both 50 move rule and threefold repetition

Name: William Lai
Date: 12-27-2014
Description: Repackaging
    * Each game type now has its own package
    * Some changes to superclasses were made to accommodate this new packaging structure

Name: William Lai
Date: 12-26-2014
Description: Fixed more bugs
    * Alice Chess promotion now works as intended
    * Alice Chess now features really dumb AI
    * Highlighting of square a8 is now correct
    * Alice Chess FEN loading works

Name: William Lai
Date: 12-26-2014
Description: Alice Chess mostly working; changing ChangeLog structure
    * Alice Chess is now mostly working, but still need to check for promotion and edge cases, as well as work on AI
    * ChangeLog will no longer follow file-by-file entries, as this is a bit too restrictive
    * Fixed bugs in AliceBoard that allowed moves that left king in check
    * Merged in-progress branch into master and unpublished in-progress branch. Also set previous commit (pre-Alice Chess) as v1.0 release.

Name: Vincent Wong
Date: 01-08-2014
Description: Fixed animation when castling, moving into a green square, and game ending
    * src/chess/*ChessBoard.java: Added utility functions for conversion between (row, col) and square #
    * src/chess/*ChessGameGraphics.java: Added graphical state tracking of the board, updated once per game loop iteration. For Standard, added a castling animation
    * src/chess/*ChessGame.java: Added small loop after game ends to allow animation to finish

Name: William Lai
Date: 01-07-2014
Description: Merged restruct back into master, following changes listed are for the previous three commits together
    * src/chess/ComputerPlayer.java: Now a superclass of StandardComputerPlayer and LosersComputerPlayer.